@@ -362,6 +362,10 @@ ext.IS_LINUX = OS_NAME.contains("linux")
 
 ext.MAVEN_GROUP_ID = "org.openjfx"
 
+// Enable native access from modules with native code
+ext.enableNativeGraphics='--enable-native-access=javafx.graphics'
+ext.enableNativeAll='--enable-native-access=javafx.graphics,javafx.media,javafx.web'
+
 // Verify that the architecture & OS are supported configurations. Note that
 // at present building on PI is not supported, but we would only need to make
 // some changes on assumptions on what should be built (like SWT / Swing) and
@@ -501,7 +505,8 @@ ext.SWT_FILE_NAME =
     IS_MAC && IS_AARCH64 ? "org.eclipse.swt.cocoa.macosx.aarch64_3.124.200.v20231113-1355" :
     IS_MAC && !IS_AARCH64 ? "org.eclipse.swt.cocoa.macosx.x86_64_3.124.200.v20231113-1355" :
     IS_WINDOWS ? "org.eclipse.swt.win32.win32.x86_64_3.124.200.v20231113-1355" :
-    IS_LINUX ? "org.eclipse.swt.gtk.linux.x86_64_3.124.200.v20231113-1355" : ""
+    IS_LINUX && IS_AARCH64 ? "org.eclipse.swt.gtk.linux.aarch64_3.124.200.v20231113-1355" :
+    IS_LINUX && !IS_AARCH64 ? "org.eclipse.swt.gtk.linux.x86_64_3.124.200.v20231113-1355" : ""
 
 // Specifies whether to run full tests (true) or smoke tests (false)
 defineProperty("FULL_TEST", "false")
@@ -531,6 +536,11 @@ ext.IS_SWT_TEST = Boolean.parseBoolean(SWT_TEST);
 //    assumeTrue(Boolean.getBoolean("unstable.test"));
 defineProperty("UNSTABLE_TEST", "false")
 ext.IS_UNSTABLE_TEST = Boolean.parseBoolean(UNSTABLE_TEST);
+
+// Default timeout values to use in JUnit for tests and lifecycle methods
+// that don't specify one
+defineProperty("JUNIT_TEST_TIMEOUT", "120s")
+defineProperty("JUNIT_LIFECYCLE_TIMEOUT", "20s")
 
 // Toggle diagnostic output from the Gradle workaround and the Sandbox test apps.
 defineProperty("WORKER_DEBUG", "false")
@@ -572,7 +582,9 @@ def defaultToolLintOptions = ""
 defineProperty("TOOL_LINT", defaultToolLintOptions)
 ext.IS_TOOL_LINT = TOOL_LINT != ""
 
-def defaultTestLintOptions = ""
+def defaultTestLintOptions =
+        "-options" + "," +
+        "removal"
 defineProperty("TEST_LINT", defaultTestLintOptions)
 ext.IS_TEST_LINT = TEST_LINT != ""
 
@@ -582,7 +594,7 @@ ext.IS_JAVAC_WERROR = Boolean.parseBoolean(JAVAC_WERROR)
 defineProperty("TOOL_JAVAC_WERROR", "false")
 ext.IS_TOOL_JAVAC_WERROR = Boolean.parseBoolean(TOOL_JAVAC_WERROR)
 
-defineProperty("TEST_JAVAC_WERROR", "false")
+defineProperty("TEST_JAVAC_WERROR", "true")
 ext.IS_TEST_JAVAC_WERROR = Boolean.parseBoolean(TEST_JAVAC_WERROR)
 
 // Doclint options (all enabled by default)
@@ -617,13 +629,8 @@ ext.DO_JCOV = Boolean.parseBoolean(JCOV)
 defineProperty("USE_CYGWIN", "true")
 ext.IS_USE_CYGWIN = Boolean.parseBoolean(USE_CYGWIN)
 
-// Define the number of threads to use when compiling (specifically for native compilation)
-// On Mac we limit it to 1 by default due to problems running gcc in parallel
-if (IS_MAC) {
-    defineProperty("NUM_COMPILE_THREADS", "1")
-} else {
-    defineProperty("NUM_COMPILE_THREADS", "${Runtime.runtime.availableProcessors()}")
-}
+// Define the number of threads to use when compiling (specifically for native compilation, including webkit)
+defineProperty("NUM_COMPILE_THREADS", "${Runtime.runtime.availableProcessors()}")
 
 //
 // The next three sections of properties are used to generate the
@@ -1124,7 +1131,7 @@ List<String> computeModulePathArgs(String  pname, List<String> deps, boolean tes
 }
 
 
-void writeRunArgsFile(File dest, List<String> libpath, List<String> modpath, List<String> modules) {
+void writeArgsFile(boolean isCompile, File dest, List<String> libpath, List<String> modpath, List<String> modules) {
 
     dest.delete()
 
@@ -1168,7 +1175,19 @@ void writeRunArgsFile(File dest, List<String> libpath, List<String> modpath, Lis
         dest <<  "--add-modules="
         dest << modules.join(",")
         dest << "\n"
+        if (!isCompile) {
+            dest << enableNativeAll
+            dest << "\n"
+        }
     }
+}
+
+void writeCompileArgsFile(File dest, List<String> libpath, List<String> modpath, List<String> modules) {
+    writeArgsFile(true, dest, libpath, modpath, modules)
+}
+
+void writeRunArgsFile(File dest, List<String> libpath, List<String> modpath, List<String> modules) {
+    writeArgsFile(false, dest, libpath, modpath, modules)
 }
 
 // perform common project manipulation for modules
@@ -2112,7 +2131,9 @@ allprojects {
     // Set sourceCompatibility to the target release of Java. Most modules
     // set compiler.options.release (to the same target version), which will
     // override this setting, but it is needed for those modules that can't.
-    sourceCompatibility = JAVA_TARGET_VERSION
+    java {
+        sourceCompatibility = JAVA_TARGET_VERSION
+    }
 
     // By default all of our projects require junit for testing so we can just
     // setup this dependency here.
@@ -2123,10 +2144,11 @@ allprojects {
         testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.8.1"
         testImplementation group: "org.junit.jupiter", name: "junit-jupiter-params", version: "5.8.1"
         testImplementation group: "org.opentest4j", name: "opentest4j", version: "1.2.0"
-        testRuntimeOnly group: "org.apiguardian", name: "apiguardian-api", version: "1.1.2"
+        testImplementation group: "org.apiguardian", name: "apiguardian-api", version: "1.1.2"
         testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.8.1"
         testRuntimeOnly group: "org.junit.platform", name: "junit-platform-commons", version: "1.8.1"
         testRuntimeOnly group: "org.junit.platform", name: "junit-platform-engine", version: "1.8.1"
+        testRuntimeOnly group: "org.junit.platform", name: "junit-platform-launcher", version: "1.8.1"
         testRuntimeOnly group: "org.junit.vintage", name: "junit-vintage-engine", version: "5.8.1"
 
         if (BUILD_CLOSED && DO_JCOV)  {
@@ -2167,6 +2189,8 @@ allprojects {
         }
 
         systemProperty 'unstable.test', IS_UNSTABLE_TEST
+        systemProperty 'junit.jupiter.execution.timeout.test.method.default', JUNIT_TEST_TIMEOUT
+        systemProperty 'junit.jupiter.execution.timeout.lifecycle.method.default', JUNIT_LIFECYCLE_TIMEOUT
     }
 
     compileTestJava {
@@ -2678,6 +2702,7 @@ project(":graphics") {
 
     test {
         def cssDir = file("$buildDir/classes/java/main/${moduleName}/javafx")
+        jvmArgs enableNativeGraphics
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
         enableAssertions = true
@@ -2766,6 +2791,7 @@ project(":controls") {
 
     test {
         def cssDir = file("$buildDir/classes/java/main/${moduleName}/javafx")
+        jvmArgs enableNativeGraphics
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
@@ -2857,6 +2883,8 @@ project(":swing") {
 
     test {
         enabled = IS_FULL_TEST && IS_AWT_TEST
+
+        jvmArgs enableNativeGraphics
     }
 
     if (COMPILE_SWING) {
@@ -2918,6 +2946,8 @@ project(":swt") {
         enabled = false // FIXME: JIGSAW -- support this with modules
         logger.info("JIGSAW Testing disabled for swt")
 
+        jvmArgs enableNativeGraphics
+
         if (IS_MAC) {
             enabled = false
             logger.info("SWT tests are disabled on MAC, because Gradle test runner does not handle -XstartOnFirstThread properly (https://issues.gradle.org/browse/GRADLE-3290).")
@@ -2966,6 +2996,7 @@ project(":fxml") {
         // StubToolkit is not *really* needed here, but because some code inadvertently invokes performance
         // tracker and this attempts to fire up the toolkit and this looks for native libraries and fails,
         // we have to use the stub toolkit for now.
+        jvmArgs enableNativeGraphics
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit"
         // FIXME: change this to also allow JDK 9 boot jdk
         classpath += files("$JDK_HOME/jre/lib/ext/nashorn.jar")
@@ -3009,6 +3040,7 @@ project(":media") {
             media name: "ffmpeg-4.0.2", ext: "tar.gz"
             media name: "ffmpeg-5.1.2", ext: "tar.gz"
             media name: "ffmpeg-6.0", ext: "tar.gz"
+            media name: "ffmpeg-7.0.2", ext: "tar.gz"
         }
         implementation project(":base")
         implementation project(":graphics")
@@ -3355,8 +3387,8 @@ project(":media") {
                     doLast {
                         project.ext.libav = [:]
                         project.ext.libav.basedir = "${buildDir}/native/linux/ffmpeg"
-                        project.ext.libav.versions = [ "3.3.3", "4.0.2", "5.1.2", "6.0" ]
-                        project.ext.libav.versionmap = [ "3.3.3" : "57", "4.0.2" : "58", "5.1.2" : "59", "6.0" : "60" ]
+                        project.ext.libav.versions = [ "3.3.3", "4.0.2", "5.1.2", "6.0", "7.0.2" ]
+                        project.ext.libav.versionmap = [ "3.3.3" : "57", "4.0.2" : "58", "5.1.2" : "59", "6.0" : "60", "7.0.2" : "61" ]
 
                         libav.versions.each { version ->
                             def libavDir = "${libav.basedir}/ffmpeg-${version}"
@@ -3436,7 +3468,7 @@ project(":media") {
                             project.ext.libav.libavffmpeg.versions = [ "56" ]
                             project.ext.libav.ffmpeg = [:]
                             project.ext.libav.ffmpeg.basedir = "${buildDir}/native/linux/ffmpeg/ffmpeg"
-                            project.ext.libav.ffmpeg.versions = [ "57", "58", "59", "60" ]
+                            project.ext.libav.ffmpeg.versions = [ "57", "58", "59", "60", "61" ]
 
                             project.ext.libav.versions.each { version ->
                                 def libavDir = "${project.ext.libav.basedir}-${version}"
@@ -3679,6 +3711,10 @@ project(":web") {
                 println "******************************************************"
             }
         }
+
+        // enable native access for all modules with native code
+        jvmArgs enableNativeAll
+
         // Run web tests in headless mode
         systemProperty 'glass.platform', 'Monocle'
         systemProperty 'monocle.platform', 'Headless'
@@ -3722,6 +3758,7 @@ project(":web") {
                 exec {
                     workingDir("$webkitOutputDir")
                     def cmakeArgs = "-DENABLE_TOOLS=1"
+                    def makeArgs = "-j $NUM_COMPILE_THREADS"
                     if (IS_STATIC_BUILD) {
                         cmakeArgs = " $cmakeArgs -DSTATIC_BUILD=1 -DUSE_THIN_ARCHIVES=OFF";
                     }
@@ -3792,6 +3829,7 @@ project(":web") {
                     cmakeArgs += " -DJAVAFX_RELEASE_VERSION=${jfxReleaseMajorVersion}"
                     commandLine("perl", "$projectDir/src/main/native/Tools/Scripts/build-webkit",
                         "--java", "--icu-unicode", targetCpuBitDepthSwitch,
+                        "--makeArgs=${makeArgs}",
                         "--no-experimental-features", "--cmakeargs=${cmakeArgs}")
                 }
             }
@@ -4048,6 +4086,9 @@ project(":systemTests") {
 
     test {
         enabled = IS_FULL_TEST
+
+        // enable native access for all modules with native code
+        jvmArgs enableNativeAll
 
         // Parse testPatchModuleArgs looking for "--module-path".
         // Save path if found so we can pass it to the module launcher tests
@@ -4724,8 +4765,8 @@ compileTargets { t ->
             includeEmptyDirs = false
             // Sets directory and file permissions in archive for Windows
             if (IS_WINDOWS && IS_USE_CYGWIN) {
-                dirMode = 0755
-                fileMode = 0755
+                dirPermissions { unix(0755) }
+                filePermissions { unix(0755) }
             }
             from sdkArtifactsDir
             into "${sdkBundleName}"
@@ -5166,7 +5207,7 @@ compileTargets { t ->
 
             if (HAS_JAVAFX_MODULES) {
                 writeRunArgsFile(runArgsFile, computeLibraryPath(true), modpath, null)
-                writeRunArgsFile(compileArgsFile, null, modpath, null)
+                writeCompileArgsFile(compileArgsFile, null, modpath, null)
 
                 if (rootProject.hasProperty("EXTRA_ADDEXPORTS_STRING")) {
                     runArgsFile << EXTRA_ADDEXPORTS_STRING
@@ -5175,7 +5216,7 @@ compileTargets { t ->
             } else {
                 modpath = [ cygpath("${standaloneLibDir}") ]
                 writeRunArgsFile(runArgsFile, null, modpath, modnames)
-                writeRunArgsFile(compileArgsFile, null, modpath, modnames)
+                writeCompileArgsFile(compileArgsFile, null, modpath, modnames)
             }
         }
     }
@@ -5676,7 +5717,7 @@ compileTargets { t ->
                     }
                 }
 
-                writeRunArgsFile(testCompileArgsFile, null, modpath, null)
+                writeCompileArgsFile(testCompileArgsFile, null, modpath, null)
                 writeRunArgsFile(testRunArgsFile, computeLibraryPath(true), modpath, null)
 
                 if (rootProject.hasProperty("EXTRA_ADDEXPORTS_STRING")) {
@@ -5711,7 +5752,7 @@ compileTargets { t ->
                     }
                 }
 
-                writeRunArgsFile(testCompileArgsFile, null, modpath, modnames)
+                writeCompileArgsFile(testCompileArgsFile, null, modpath, modnames)
                 writeRunArgsFile(testRunArgsFile, computeLibraryPath(true), modpath, modnames)
 
             }
